# zh-tts

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  pyproject.toml
src/zh_tts/: __init__.py  cn_tn.py  globals.py  io.py  resources.py  synthesizer.py  transcriber.py
src/zh_tts_cli/: argparse_helper.py  cli.py  cn_tn.py  globals.py  logging_configuration.py  main.py
src/zh_tts_cli_tests/main_py/: test_get_sentences.py  test_remove_unallowed.py  test_segment_words.py  test_synthesize_ipa.py  test_synthesize_zh.py
src/zh_tts_tests/: helper.py  test_remove_unallowed.py  test_segment_words.py  test_synthesizer.py  test_transcriber.py
src/zh_tts_tests/synthesizer_py/: test_synthesize.py
src/zh_tts_tests/transcriber_py/: test_get_sentences.py  test_remove_unallowed.py  test_transcribe_to_ipa.py
src/zho_tts/: __init__.py  cn_tn.py  globals.py  helper.py  resources.py  synthesizer.py  transcriber.py
src/zho_tts_app/: __init__.py  app.py  globals.py  logging_configuration.py  main.py
src/zho_tts_app_tests/: conftest.py
src/zho_tts_app_tests/app_py/: test_run_main.py
src/zho_tts_cli/: cli.py  globals.py  logging_configuration.py  main.py
src/zho_tts_cli_tests/: conftest.py
src/zho_tts_cli_tests/main_py/: test_synthesize_ipa.py  test_synthesize_zh.py
src/zho_tts_gr/: __init__.py  app.py
src/zho_tts_tests/: helper.py
src/zho_tts_tests/synthesizer_py/: test_synthesize.py
src/zho_tts_tests/transcriber_py/: test_get_sentences.py  test_remove_unallowed.py  test_segment_words.py  test_transcribe_to_ipa.py
