[project]
name = "zho-tts"
version = "0.0.1"
description = "Command-line interface and Python library for synthesizing Chinese texts into speech."
readme = "README.md"
requires-python = ">=3.8, <3.12"
license = { text = "MIT" }
authors = [{ name = "Stefan Taubert", email = "pypi@stefantaubert.com" }]
maintainers = [{ name = "Stefan Taubert", email = "pypi@stefantaubert.com" }]
keywords = [
  "Text-to-speech",
  "Speech synthesis",
  "praat",
  "TextGrid",
  "Utils",
  "Language",
  "Linguistics",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy>=1.18.5",
  "tqdm>=4.63.0",
  "ordered_set>=4.1.0",
  "ffmpy>=0.3.1",
  "spacy-pkuseg>=0.0.33",
  "zhon>=2.0.2",
  "opencc-py>=1.1.0",
  "torch>=2.0.0",
  "pronunciation-dictionary>=0.0.6",
  "pronunciation-dictionary-utils>=0.0.5",
  "dict-from-dict>=0.0.4",
  "dict-from-pypinyin>=0.0.2",
  "tacotron-cli>=0.0.5",
  "waveglow-cli>=0.0.2",
  "txt-utils>=0.0.3",
  "pinyin-to-ipa>=0.0.2",
  "gradio[oauth]>=4.26.0",
  "uvicorn>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/stefantaubert/zh-tts"
Issues = "https://github.com/stefantaubert/zh-tts/issues"

[project.scripts]
zho-tts-cli = "zho_tts_cli.cli:run"
zho-tts-web = "zho_tts_gr.app:run"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
packages = ["zho_tts", "zho_tts_cli", "zho_tts_app", "zho_tts_gr"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "zho_tts",
  "zho_tts.*",
  "zho_tts_cli",
  "zho_tts_cli.*",
  "zho_tts_app",
  "zho_tts_app.*",
  "zho_tts_gr",
  "zho_tts_gr.*",
]
exclude = [
  "zho_tts_tests",
  "zho_tts_tests.*",
  "zho_tts_app_tests",
  "zho_tts_app_tests.*",
  "zho_tts_debug",
  "zho_tts_debug.*",
  "zho_tts_cli_debug",
  "zho_tts_cli_debug.*",
]
namespaces = true

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
testpaths = ["src/zho_tts_tests", "src/zho_tts_app_tests"]

[tool.autopep8]
indent-size = 2
ignore = ["E121"]
max_line_length = 100

[tool.isort]
line_length = 100
indent = 2
known_first_party = ["zho_tts", "zho_tts_cli", "zho_tts_gr", "zh_tts_app"]
known_third_party = [
  "scipy",
  "numpy",
  "tqdm",
  "TextGrid",
  "pandas",
  "ordered_set",
  "matplotlib",
  "pronunciation_dictionary",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310,311}
isolated_build = True

[testenv]
deps = 
  pytest
commands = 
  pytest
  zho-tts-cli
  zho-tts-cli -v
  zho-tts-cli -h
"""

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"
